[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FuzzyClustering"
dynamic = ["version"]
dependencies = ["numpy~=1.26.2"]
requires-python = ">=3.12"
authors = [{ name = "Orkun GÜRLER", email = "orkun.guerler@gmail.com" }]
maintainers = [{ name = "Orkun GÜRLER", email = "orkun.guerler@gmail.com" }]
description = "Fuzzy Clustering Algorithms"
keywords = ["fuzzy", "clustering", "fuzzy clustering", "pattern recognition"]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
