[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ClusterAnalysis"
version = "0.0.0.dev0"
dependencies = ["numpy~=2.1.3", "matplotlib~=3.9.2", "scikit-learn~=1.5.2"]
requires-python = ">=3.12"
authors = [{ name = "Orkun GÜRLER", email = "orkungurler@gmail.com" }]
maintainers = [{ name = "Orkun GÜRLER", email = "orkungurler@gmail.com" }]
description = "Cluster Analysis Algorithms"
keywords = ["hard clustering", "crisp clustering", "soft clustering", "fuzzy clustering", "pattern recognition"]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
